--- a/src/TikTokLoaderMAUI/MainPage.xaml
+++ b/src/TikTokLoaderMAUI/MainPage.xaml
@@ -4,10 +4,12 @@
              xmlns:viewModel="clr-namespace:TikTokLoaderMAUI.ViewModel;assembly=TikTokLoaderMAUI"
              xmlns:converters="using:TikTokLoaderMAUI.Converters"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+             xmlns:i18n="clr-namespace:TikTokLoaderMAUI.i18n"
              x:Class="TikTokLoaderMAUI.MainPage">
 
     <ContentPage.Resources>
         <converters:UnixTimeToDateTimeConverter x:Key="UnixTimeToDateTimeConverter" />
+        <toolkit:InvertedBoolConverter x:Key="InvertBoolConverter" />
     </ContentPage.Resources>
 
     <ContentPage.Behaviors>
@@ -30,16 +32,16 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <Entry x:Name="UriEntry" Grid.Row="0" Placeholder="TikTok URL" ClearButtonVisibility="WhileEditing" Text="{Binding Path=DownloadUri, Mode=TwoWay}"
+        <Entry x:Name="UriEntry" Grid.Row="0" Placeholder="{x:Static i18n:DownloadResource.UrlPlaceholder}" ClearButtonVisibility="WhileEditing" Text="{Binding Path=DownloadUri, Mode=TwoWay}"
                Completed="UnFocusEntryAndSend" ReturnType="Go" ReturnCommand="{Binding Path=AnalyzeUriCommand, Mode=OneWay}"
                IsSpellCheckEnabled="False" Keyboard="Url" />
-        <Button Grid.Row="1" HorizontalOptions="Fill" Text="Analyze URL" Command="{Binding Path=AnalyzeUriCommand, Mode=OneWay}" />
+        <Button Grid.Row="1" HorizontalOptions="Fill" Text="{x:Static i18n:DownloadResource.AnalyzeUri}" Command="{Binding Path=AnalyzeUriCommand, Mode=OneWay}" />
 
         <Grid Grid.Row="3" IsVisible="{Binding Path=IsAnalyzing, Mode=OneWay}">
             <ActivityIndicator IsRunning="True" IsVisible="True" HeightRequest="64" WidthRequest="64" />
         </Grid>
 
-        <Grid Grid.Row="3" IsVisible="{Binding Path=HasDownloadDetails, Mode=OneWay}">
+        <Grid Grid.Row="3" IsVisible="{Binding Path=HasDownloadDetails, Mode=OneWay}" IsEnabled="{Binding Path=IsAnalyzing, Mode=OneWay, Converter={StaticResource InvertBoolConverter}}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="25" />
@@ -74,34 +76,34 @@
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
 
-                    <Label Grid.Row="0" Grid.Column="0" Text="Author" FontAttributes="Bold" VerticalOptions="Center" />
+                    <Label Grid.Row="0" Grid.Column="0" Text="{x:Static i18n:DownloadResource.Author}" FontAttributes="Bold" VerticalOptions="Center" />
                     <StackLayout Grid.Row="0" Grid.Column="2" Orientation="Horizontal">
                         <toolkit:AvatarView ImageSource="{Binding Path=Data.UploadUserAvatar, Mode=OneWay}" Margin="0,0,5,0" 
                                             HeightRequest="24" WidthRequest="24" VerticalOptions="Center" BorderWidth="0" />
                         <Label Text="{Binding Path=Data.UploadUser, Mode=OneWay}" VerticalOptions="Center" />
                     </StackLayout>
 
-                    <Label Grid.Row="2" Grid.Column="0" Text="Uploaded on" FontAttributes="Bold" VerticalOptions="Center" />
+                    <Label Grid.Row="2" Grid.Column="0" Text="{x:Static i18n:DownloadResource.UploadDate}" FontAttributes="Bold" VerticalOptions="Center" />
                     <Label Grid.Row="2" Grid.Column="2" LineBreakMode="WordWrap"
                            Text="{Binding Path=Data.CreationTimeStamp, Mode=OneWay, Converter={StaticResource UnixTimeToDateTimeConverter}, StringFormat='{0:f}'}" />
 
-                    <Label Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Text="Statistics" FontAttributes="Bold" FontSize="20" />
+                    <Label Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Text="{x:Static i18n:DownloadResource.Statistics}" FontAttributes="Bold" FontSize="20" />
 
-                    <Label Grid.Row="6" Grid.Column="0" Text="Views" FontAttributes="Bold" />
+                    <Label Grid.Row="6" Grid.Column="0" Text="{x:Static i18n:DownloadResource.Views}" FontAttributes="Bold" />
                     <Label Grid.Row="6" Grid.Column="2" Text="{Binding Path=Data.Statistics.PlayCount, Mode=OneWay, StringFormat='{0:N0}'}" />
 
-                    <Label Grid.Row="8" Grid.Column="0" Text="Comments" FontAttributes="Bold" />
+                    <Label Grid.Row="8" Grid.Column="0" Text="{x:Static i18n:DownloadResource.Comments}" FontAttributes="Bold" />
                     <Label Grid.Row="8" Grid.Column="2" Text="{Binding Path=Data.Statistics.CommentsCount, Mode=OneWay, StringFormat='{0:N0}'}" />
 
-                    <Label Grid.Row="10" Grid.Column="0" Text="Collections" FontAttributes="Bold" />
+                    <Label Grid.Row="10" Grid.Column="0" Text="{x:Static i18n:DownloadResource.Collections}" FontAttributes="Bold" />
                     <Label Grid.Row="10" Grid.Column="2" Text="{Binding Path=Data.Statistics.CollectsCount, Mode=OneWay, StringFormat='{0:N0}'}" />
                 </Grid>
             </ScrollView>
 
             <StackLayout Grid.Row="4" Orientation="Vertical">
-                <Button Text="Download without watermark" Command="{Binding Path=DownloadWithoutWatermarkCommand, Mode=OneWay}" HorizontalOptions="Fill" />
-                <Button Text="Download with watermark" Command="{Binding Path=DownloadWithWatermarkCommand, Mode=OneWay}" HorizontalOptions="Fill" Margin="0,5,0,5" />
-                <Button Text="Download music" Command="{Binding Path=DownloadMusicCommand, Mode=OneWay}" HorizontalOptions="Fill" />
+                <Button Text="{x:Static i18n:DownloadResource.DownloadNoWatermark}" Command="{Binding Path=DownloadWithoutWatermarkCommand, Mode=OneWay}" HorizontalOptions="Fill" />
+                <Button Text="{x:Static i18n:DownloadResource.DownloadWatermark}" Command="{Binding Path=DownloadWithWatermarkCommand, Mode=OneWay}" HorizontalOptions="Fill" Margin="0,5,0,5" />
+                <Button Text="{x:Static i18n:DownloadResource.DownloadMusic}" Command="{Binding Path=DownloadMusicCommand, Mode=OneWay}" HorizontalOptions="Fill" />
             </StackLayout>
         </Grid>
     </Grid>
