--- a/src/TikTokLoaderMAUI/Resources/Styles/Colors.xaml
+++ b/src/TikTokLoaderMAUI/Resources/Styles/Colors.xaml
@@ -17,6 +17,7 @@
     <Color x:Key="Gray600">#404040</Color>
     <Color x:Key="Gray900">#212121</Color>
     <Color x:Key="Gray950">#141414</Color>
+    <Color x:Key="LightThemePageBackground">#EDEDED</Color>
     <Color x:Key="DarkThemePageBackground">#2C2E30</Color>
     <SolidColorBrush x:Key="PrimaryBrush" Color="{StaticResource Primary}"/>
     <SolidColorBrush x:Key="SecondaryBrush" Color="{StaticResource Secondary}"/>
@@ -31,6 +32,7 @@
     <SolidColorBrush x:Key="Gray600Brush" Color="{StaticResource Gray600}"/>
     <SolidColorBrush x:Key="Gray900Brush" Color="{StaticResource Gray900}"/>
     <SolidColorBrush x:Key="Gray950Brush" Color="{StaticResource Gray950}"/>
+    <SolidColorBrush x:Key="LightThemePageBackgroundBrush" Color="{StaticResource LightThemePageBackground}" />
     <SolidColorBrush x:Key="DarkThemePageBackgroundBrush" Color="{StaticResource DarkThemePageBackground}" />
 
     <Color x:Key="Yellow100Accent">#F7B548</Color>
