--- a/src/TikTokLoaderMAUI/InfoPage.xaml
+++ b/src/TikTokLoaderMAUI/InfoPage.xaml
@@ -65,8 +65,13 @@
             <toolkit:Expander x:Name="LicenseExpander" IsExpanded="False" Margin="0,10,0,0">
                 <toolkit:Expander.Header>
                     <HorizontalStackLayout>
-                        <Image Aspect="Center" Source="{material:Icon Icon=ExpandMore}" IsVisible="{Binding Source={x:Reference LicenseExpander}, Path=IsExpanded, Converter={StaticResource InvertBoolConverter}}" VerticalOptions="Center" />
-                        <Image Aspect="Center" Source="{material:Icon Icon=ExpandLess}" IsVisible="{Binding Source={x:Reference LicenseExpander}, Path=IsExpanded}" VerticalOptions="Center" />
+                        <material:MauiIcon Icon="ExpandMore" VerticalOptions="Center"
+                                           IconColor="{AppThemeBinding Light={StaticResource Gray900}, Dark={StaticResource White}}"
+                                           IsVisible="{Binding Source={x:Reference LicenseExpander}, Path=IsExpanded, Converter={StaticResource InvertBoolConverter}}"/>
+
+                        <material:MauiIcon Icon="ExpandLess" VerticalOptions="Center"
+                                           IconColor="{AppThemeBinding Light={StaticResource Gray900}, Dark={StaticResource White}}"
+                                           IsVisible="{Binding Source={x:Reference LicenseExpander}, Path=IsExpanded}"/>
 
                         <Label Text="{x:Static i18n:InfoResource.ThirdPartyLicenses}" Style="{StaticResource CategoryHeaderStyle}" VerticalOptions="Center" />
                     </HorizontalStackLayout>
